# omnisight

./: .gitignore  Dockerfile.serving  Dockerfile.training  README.md  docker-compose.yml  pyproject.toml  script.sh
conf/: train.yaml
src/: app.py  train_model.py  utils.py
src/anomaly_detector/: dataset.py  model.py
src/omnisight/ingest/anomaly_detector/: dataset.py  model.py  train_model.py
