[project]
name = "omnisight"
version = "0.0.1"
authors = [{ name = "eduardo.vilasboas.guerra@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "hydra-core==1.3.2",
    "lightning>=2.6.1",
    "mlflow>=2.14.0",
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "ipykernel",
    "pylint>=4.0.5",
]

[project.scripts]
main = "omnisight.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
