[project]
name = "omnisight"
version = "0.0.1"
authors = [{ name = "eduardo.vilasboas.guerra@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    # Shared by both training and serving
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.3.0",
    "lightning>=2.6.1",
    "mlflow==3.10.1",
    "torchmetrics>=1.0.0",
    "numpy>=1.24.0",
]

[dependency-groups]
training = [
    "hydra-core==1.3.2",
    "torchaudio>=2.10.0",
    "google-genai>=1.67.0",
    "streamlit==1.55.0",
]
serving = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.20",
    "av>=14.0.0",
    "Pillow>=10.0.0",
]
dev = [
    "pytest",
    "ruff",
    "ipykernel",
    "pylint>=4.0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
